@@ -24,7 +24,6 @@ import projet.projetstage02.service.StudentService;
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -55,22 +54,25 @@ public class RootControllerTest {
     @Mock
     GestionnaireService gestionnaireService;
 
-    JacksonTester<StudentDTO> jsonStudentDTO;
+    JacksonTester<StudentInDTO> jsonStudentDTO;
     JacksonTester<LoginDTO> jsonLoginDTO;
     JacksonTester<CompanyDTO> jsonCompanyDTO;
     JacksonTester<GestionnaireDTO> jsonGestionnaireDTO;
-    JacksonTester<OffreDTO> jsonOffreDTO;
+    JacksonTester<OffreInDTO> jsonOffreDTO;
     JacksonTester<TokenDTO> jsonTokenDTO;
     JacksonTester<CvRefusalDTO> jsonCvRefusalDTO;
     JacksonTester<PdfDTO> jsonPdfDTO;
     JacksonTester<SignatureInDTO> jsonSignatureDTO;
+    JacksonTester<EvaluationInDTO> jsonEvalInDTO;
 
-    StudentDTO bart;
+    StudentInDTO bart;
+    StudentOutDTO bartOut;
     CompanyDTO duffBeer;
     TokenDTO token;
     LoginDTO login;
     GestionnaireDTO burns;
-    OffreDTO duffOffre;
+    OffreInDTO duffOffre;
+    OffreOutDTO duffOffreOut;
     PdfOutDTO duffOfferOut;
     PdfDTO bartCV;
     CvRefusalDTO cvRefusalDTO;
@@ -81,17 +83,27 @@ public class RootControllerTest {
     StageContractInDTO stageContractInDTO;
     StageContractOutDTO stageContractOutDTO;
     SignatureInDTO signatureInDTO;
-    UnvalidatedAcceptationsDTO acceptationsDTO;
+    ContractsDTO contractsDTO;
     OfferApplicationDTO offerApplicationDTO;
 
     CvStatusDTO cvStatusDTO;
+    EvaluationInfoDTO evalInfoDTO;
+    EvaluationInDTO evalInDTO;
 
-    List<StageContractOutDTO> contracts;
 
     // https://thepracticaldeveloper.com/guide-spring-boot-controller-tests/
     @BeforeEach
     void setup() {
-        bart = StudentDTO.builder()
+        bart = StudentInDTO.builder()
+                .firstName("Bart")
+                .lastName("Simpson")
+                .email("bart.simpson@springfield.com")
+                .department(Department.Transport.departement)
+                .password("eatMyShorts")
+                .isConfirmed(false)
+                .inscriptionTimestamp(Timestamp.valueOf(LocalDateTime.now()).getTime())
+                .build();
+        bartOut = StudentOutDTO.builder()
                 .firstName("Bart")
                 .lastName("Simpson")
                 .email("bart.simpson@springfield.com")
@@ -120,7 +132,18 @@ public class RootControllerTest {
                 .password("excellent")
                 .build();
 
-        duffOffre = OffreDTO.builder()
+        duffOffre = OffreInDTO.builder()
+                .nomDeCompagnie("Duff Beer")
+                .department(Department.Transport.departement)
+                .position("Delivery Guy")
+                .heureParSemaine(40)
+                .salaire(40)
+                .dateStage("2021-05-01")
+                .session("Hiver 2022")
+                .adresse("654 Duff Street")
+                .pdf(new byte[0])
+                .build();
+        duffOffreOut = OffreOutDTO.builder()
                 .nomDeCompagnie("Duff Beer")
                 .department(Department.Transport.departement)
                 .position("Delivery Guy")
@@ -128,7 +151,7 @@ public class RootControllerTest {
                 .salaire(40)
                 .session("Hiver 2022")
                 .adresse("654 Duff Street")
-                .pdf(new byte[0])
+                .pdf(byteToString(new byte[0]))
                 .build();
 
         token = TokenDTO.builder()
@@ -153,7 +176,7 @@ public class RootControllerTest {
 
         bartApplys = ApplicationListDTO.builder()
                 .studentId(bart.getId())
-                .offersId(Arrays.asList(duffOffre.getId()))
+                .offersId(List.of(duffOffre.getId()))
                 .build();
 
         cvRefusalDTO = CvRefusalDTO.builder()
@@ -174,6 +197,17 @@ public class RootControllerTest {
                 .studentsId(new ArrayList<>() {{
                     add(bart.getId());
                 }})
+                .build();
+
+        offerApplicationDTO = OfferApplicationDTO.builder().applicants(List.of(
+                StudentOutDTO.builder().build(),
+                StudentOutDTO.builder().build(),
+                StudentOutDTO.builder().build()
+        )).build();
+
+        cvStatusDTO = CvStatusDTO.builder()
+                .status("ACCEPTED")
+                .refusalMessage("")
                 .build();
 
         stageContractInDTO = StageContractInDTO.builder()
@@ -198,25 +232,29 @@ public class RootControllerTest {
                 .studentSignature(signatureInDTO.getSignature())
                 .build();
 
-        acceptationsDTO = new UnvalidatedAcceptationsDTO();
-        acceptationsDTO.add(UnvalidatedAcceptationDTO.builder()
-                .employFullName("Bob Marley")
-                .companyName("Bell")
-                .studentId(1L)
-                .studentFullName("Samir Badi")
-                .offerId(2L)
-                .position("Smoking weed")
-                .build()
-        );
-        offerApplicationDTO = OfferApplicationDTO.builder().applicants(List.of(
-                StudentDTO.builder().build(),
-                StudentDTO.builder().build(),
-                StudentDTO.builder().build()
-        )).build();
+        contractsDTO = new ContractsDTO();
+        contractsDTO.add(stageContractOutDTO);
+        contractsDTO.add(stageContractOutDTO);
 
-        cvStatusDTO = CvStatusDTO.builder()
-                .status("ACCEPTED")
-                .refusalMessage("")
+        evalInfoDTO = new EvaluationInfoDTO(duffBeer.toModel(), duffOffre.toModel(), bart.toModel());
+
+        evalInDTO = EvaluationInDTO.builder()
+                .climatTravail("Plutôt en accord")
+                .commentaires("Plutôt en accord")
+                .communicationAvecSuperviser("Plutôt en accord")
+                .contractId(1L)
+                .dateSignature("2021-05-01")
+                .environementTravail("Plutôt en accord")
+                .equipementFourni("Plutôt en accord")
+                .heureTotalDeuxiemeMois(23)
+                .heureTotalPremierMois(23)
+                .heureTotalTroisiemeMois(23)
+                .integration("Plutôt en accord")
+                .milieuDeStage("Plutôt en accord")
+                .tachesAnnonces("Plutôt en accord")
+                .volumeDeTravail("Plutôt en accord")
+                .tempsReelConsacre("Plutôt en accord")
+                .signature(byteToString(new byte[]{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}))
                 .build();
 
         contracts = new ArrayList<>() {{
@@ -252,7 +290,7 @@ public class RootControllerTest {
     void testCreateStudentBadRequest() throws Exception {
         mockMvc.perform(post("/createStudent")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonStudentDTO.write(new StudentDTO()).getJson()))
+                        .content(jsonStudentDTO.write(new StudentInDTO()).getJson()))
 
                 .andExpect(status().isBadRequest());
     }
@@ -402,7 +440,7 @@ public class RootControllerTest {
     void testCreateOffreBadRequest() throws Exception {
         mockMvc.perform(post("/createOffre")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonOffreDTO.write(new OffreDTO()).getJson()))
+                        .content(jsonOffreDTO.write(new OffreInDTO()).getJson()))
 
                 .andExpect(status().isBadRequest());
     }
@@ -420,8 +458,8 @@ public class RootControllerTest {
 
     @Test
     void testConfirmStudentEmailHappyDay() throws Exception {
-        when(studentService.getStudentById(1L)).thenReturn(bart);
-        when(studentService.saveStudent(bart)).thenReturn(1L);
+        when(studentService.getStudentById(1L)).thenReturn(bartOut);
+        when(studentService.saveStudent(any())).thenReturn(1L);
 
         mockMvc.perform(
                         put("/confirmEmail/student/{id}", 1))
@@ -441,8 +479,8 @@ public class RootControllerTest {
 
     @Test
     void testConfirmStudentEmailExpired() throws Exception {
-        bart.setInscriptionTimestamp(Timestamp.valueOf(LocalDateTime.now().minusMonths(1)).getTime());
-        when(studentService.getStudentById(1L)).thenReturn(bart);
+        bartOut.setInscriptionTimestamp(Timestamp.valueOf(LocalDateTime.now().minusMonths(1)).getTime());
+        when(studentService.getStudentById(1L)).thenReturn(bartOut);
 
         mockMvc.perform(
                         put("/confirmEmail/student/{id}", 1))
@@ -530,9 +568,9 @@ public class RootControllerTest {
 
     @Test
     void testLoginStudentHappyDay() throws Exception {
-        bart.setEmailConfirmed(true);
+        bartOut.setEmailConfirmed(true);
         when(authService.getToken(token.getToken(), STUDENT)).thenReturn(Token.builder().userId(1L).build());
-        when(studentService.getStudentById(1L)).thenReturn(bart);
+        when(studentService.getStudentById(1L)).thenReturn(bartOut);
 
         mockMvc.perform(put("/student")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -684,7 +722,7 @@ public class RootControllerTest {
     void testUnvalidatedStudentsHappyDay() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
         when(gestionnaireService.getUnvalidatedStudents())
-                .thenReturn(List.of(bart));
+                .thenReturn(List.of(bartOut));
 
         mockMvc.perform(put("/unvalidatedStudents")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -870,7 +908,7 @@ public class RootControllerTest {
     void testUnvalidatedOffers() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
         when(gestionnaireService.getUnvalidatedOffers())
-                .thenReturn(List.of(duffOffre));
+                .thenReturn(List.of(duffOffreOut));
 
         mockMvc.perform(put("/unvalidatedOffers")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -903,7 +941,7 @@ public class RootControllerTest {
     void testValidatedOffersHappyDay() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
         when(gestionnaireService.getValidatedOffers(anyInt()))
-                .thenReturn(List.of(duffOffre));
+                .thenReturn(List.of(duffOffreOut));
 
         mockMvc.perform(put("/validatedOffers/2022")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -914,8 +952,8 @@ public class RootControllerTest {
 
     @Test
     void testValidateOfferSuccess() throws Exception {
-        duffOffre.setValide(true);
-        when(gestionnaireService.validateOfferById(anyLong())).thenReturn(duffOffre);
+        duffOffreOut.setValide(true);
+        when(gestionnaireService.validateOfferById(anyLong())).thenReturn(duffOffreOut);
 
         mockMvc.perform(put("/validateOffer/{id}", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -985,8 +1023,8 @@ public class RootControllerTest {
     @Test
     void testUploadCurriculumVitaeSuccess() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        bart.setCvToValidate(bartCV.getPdf());
-        when(studentService.uploadCurriculumVitae(any())).thenReturn(bart);
+        bartOut.setCvToValidate(byteToString(bartCV.getPdf()));
+        when(studentService.uploadCurriculumVitae(any())).thenReturn(bartOut);
 
         mockMvc.perform(put("/uploadStudentCV")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -994,7 +1032,7 @@ public class RootControllerTest {
 
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.firstName", is("Bart")))
-                .andExpect(jsonPath("$.cvToValidate", is("")));
+                .andExpect(jsonPath("$.cvToValidate", is("[]")));
     }
 
     @Test
@@ -1055,7 +1093,7 @@ public class RootControllerTest {
     @Test
     void testUnvalidatedCvStudents() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        when(gestionnaireService.getUnvalidatedCVStudents()).thenReturn(List.of(bart));
+        when(gestionnaireService.getUnvalidatedCVStudents()).thenReturn(List.of(bartOut));
 
         mockMvc.perform(put("/unvalidatedCvStudents", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -1111,7 +1149,7 @@ public class RootControllerTest {
 
     @Test
     void testValidateStudentCVSuccess() throws Exception {
-        when(gestionnaireService.validateStudentCV(anyLong())).thenReturn(bart);
+        when(gestionnaireService.validateStudentCV(anyLong())).thenReturn(bartOut);
 
         mockMvc.perform(put("/validateCv/{studentId}", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -1146,7 +1184,7 @@ public class RootControllerTest {
     @Test
     void testRefuseStudentCVSuccess() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        when(gestionnaireService.removeStudentCvValidation(anyLong(), anyString())).thenReturn(bart);
+        when(gestionnaireService.removeStudentCvValidation(anyLong(), anyString())).thenReturn(bartOut);
 
         mockMvc.perform(put("/refuseCv/{studentId}", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -1183,7 +1221,7 @@ public class RootControllerTest {
     @Test
     void testGetOffersByStudentDepartmentSuccess() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        when(studentService.getOffersByStudentDepartment(anyLong())).thenReturn(List.of(duffOffre));
+        when(studentService.getOffersByStudentDepartment(anyLong())).thenReturn(List.of(duffOffreOut));
 
         mockMvc.perform(put("/getOffers/{studentId}", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -1402,6 +1440,125 @@ public class RootControllerTest {
     }
 
     @Test
+    void testGetApplicationsForOfferHappyDay() throws Exception {
+        when(companyService.getStudentsForOffer(anyLong())).thenReturn(offerApplicationDTO);
+
+        mockMvc.perform(put("/offer/{id}/applications", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.applicants.length()", is(3)));
+    }
+
+    @Test
+    void testGetApplicationsForOfferNotFound() throws Exception {
+        when(companyService.getStudentsForOffer(anyLong())).thenThrow(new NonExistentOfferExeption());
+
+        mockMvc.perform(put("/offer/{id}/applications", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testGetApplicationsForOfferForbidden() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
+
+        mockMvc.perform(put("/offer/{id}/applications", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void testGetStatusValidationCVHappyDay() throws Exception {
+        when(studentService.getStudentCvStatus(anyLong())).thenReturn(cvStatusDTO);
+
+        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status", is("ACCEPTED")));
+    }
+
+    @Test
+    void testGetStatusValidationCVForbidden() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
+
+        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void testGetStatusValidationCVNotFound() throws Exception {
+        when(studentService.getStudentCvStatus(anyLong())).thenThrow(new NonExistentEntityException());
+
+        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testGetCompanyOffersHappyDay() throws Exception {
+        when(companyService.getValidatedOffers(anyLong())).thenReturn(List.of(duffOffreOut));
+
+        mockMvc.perform(put("/company/validatedOffers/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()", is(1)));
+    }
+
+    @Test
+    void testGetCompanyOffersForbidden() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
+
+        mockMvc.perform(put("/company/validatedOffers/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void testGetStudentCvToValidateCompanyHappyDay() throws Exception {
+        when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
+        PdfOutDTO cv = new PdfOutDTO(1L, "[96,17,69]");
+        when(companyService.getStudentCv(anyLong())).thenReturn(cv);
+
+        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(jsonPath("$.pdf", is("[96,17,69]")))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetStudentCvToValidateCompanyNotFound() throws Exception {
+        when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
+        doThrow(new NonExistentEntityException()).
+                when(companyService).getStudentCv(anyLong());
+
+        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testGetStudentCvToValidateCompanyInvalidToken() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
+
+        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+
+    @Test
     void testCreateStageContactHappyDay() throws Exception {
         when(gestionnaireService.createStageContract(any())).thenReturn(stageContractOutDTO);
 
@@ -1453,89 +1610,6 @@ public class RootControllerTest {
     }
 
     @Test
-    void testGetUnvalidatedAcceptationsHappyDay() throws Exception {
-        when(gestionnaireService.getUnvalidatedAcceptation()).thenReturn(acceptationsDTO);
-
-        mockMvc.perform(put("/unvalidatedAcceptations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.applications.size()", is(1)));
-    }
-
-    @Test
-    void testGetUnvalidatedAcceptationsInvalidToken() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/unvalidatedAcceptations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void testGetCompanyContractsHappyDay() throws Exception {
-        when(companyService.getContracts(anyLong(), anyString())).thenReturn(contracts);
-
-        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()", is(3)));
-    }
-
-    @Test
-    void testGetCompanyContractsNotFound() throws Exception {
-        when(companyService.getContracts(anyLong(), anyString())).thenThrow(new NonExistentEntityException());
-
-        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testGetCompanyContractsTokenInvalid() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void testGetStudentContractsHappyDay() throws Exception {
-        when(studentService.getContracts(anyLong(), anyString())).thenReturn(contracts);
-
-        mockMvc.perform(put("/studentContracts/{studentId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()", is(3)));
-    }
-
-    @Test
-    void testGetStudentContractsNotFound() throws Exception {
-        when(studentService.getContracts(anyLong(), anyString())).thenThrow(new NonExistentEntityException());
-
-        mockMvc.perform(put("/studentContracts/{studentId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testGetStudentContractsTokenInvalid() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/studentContracts/{studentId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
     void testCompanyContractSignatureHappyDay() throws Exception {
         when(companyService.addSignatureToContract(any())).thenReturn(stageContractOutDTO);
 
@@ -1554,16 +1628,6 @@ public class RootControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonSignatureDTO.write(signatureInDTO).getJson()))
                 .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testCompanyContractSignatureConflict() throws Exception {
-        when(companyService.addSignatureToContract(any())).thenThrow(new InvalidOwnershipException());
-
-        mockMvc.perform(put("/companySignatureContract")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonSignatureDTO.write(signatureInDTO).getJson()))
-                .andExpect(status().isConflict());
     }
 
     @Test
@@ -1601,136 +1665,104 @@ public class RootControllerTest {
     void testStudentContractSignatureConflict() throws Exception {
         when(studentService.addSignatureToContract(any())).thenThrow(new InvalidOwnershipException());
 
-        mockMvc.perform(put("/studentSignatureContract")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonSignatureDTO.write(signatureInDTO).getJson()))
-                .andExpect(status().isConflict());
-    }
-
-    @Test
-    void testStudentContractSignatureInvalidToken() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/studentSignatureContract")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonSignatureDTO.write(signatureInDTO).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    void testGetApplicationsForOfferHappyDay() throws Exception {
-
-        when(companyService.getStudentsForOffer(anyLong())).thenReturn(offerApplicationDTO);
-        mockMvc.perform(put("/offer/{id}/applications", 1)
+        mockMvc.perform(put("/contractsToCreate")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.applicants.length()", is(3)));
+                .andExpect(jsonPath("$.contracts.size()", is(2)));
     }
 
     @Test
-    void testGetApplicationsForOfferNotFound() throws Exception {
+    void testGetUnvalidatedAcceptationsInvalidToken() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
 
-        when(companyService.getStudentsForOffer(anyLong())).thenThrow(new NonExistentOfferExeption());
-        mockMvc.perform(put("/offer/{id}/applications", 1)
+        mockMvc.perform(put("/contractsToCreate")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void testGetEvaluationInfoHappyDay() throws Exception {
+        when(gestionnaireService.getEvaluationInfoForContract(anyLong())).thenReturn(evalInfoDTO);
+
+        mockMvc.perform(put("/evaluateStage/{contractId}/getInfo", 1L)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.nomCompagnie", is(duffBeer.getCompanyName())));
+    }
+
+    @Test
+    void testGetEvaluationInfoNotFound() throws Exception {
+        when(gestionnaireService.getEvaluationInfoForContract(anyLong())).thenThrow(new NonExistentEntityException());
+
+        mockMvc.perform(put("/evaluateStage/{contractId}/getInfo", 1L)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
                 .andExpect(status().isNotFound());
     }
 
     @Test
-    void testGetApplicationsForOfferForbidden() throws Exception {
-
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-        mockMvc.perform(put("/offer/{id}/applications", 1)
+    void testEvaluateStageHappyDay() throws Exception {
+        doNothing().when(gestionnaireService).evaluateStage(any());
+        mockMvc.perform(post("/evaluateStage/{token}", token.getToken())
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
+                        .content(jsonEvalInDTO.write(evalInDTO).getJson()))
+                .andExpect(status().isCreated());
     }
 
     @Test
-    void testGetStatusValidationCVHappyDay() throws Exception {
+    void testGetAllContractsHappyDay() throws Exception {
+        when(gestionnaireService.getContracts()).thenReturn(contractsDTO);
 
-        when(studentService.getStudentCvStatus(anyLong())).thenReturn(cvStatusDTO);
-        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+        mockMvc.perform(put("/getContracts")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.status", is("ACCEPTED")));
+                .andExpect(jsonPath("$.contracts.size()", is(2)));
     }
 
     @Test
-    void testGetStatusValidationCVForbidden() throws Exception {
+    void testGetAllContractsEmpty() throws Exception {
+        contractsDTO.setContracts(new ArrayList<>());
+        when(gestionnaireService.getContracts()).thenReturn(contractsDTO);
 
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+        mockMvc.perform(put("/getContracts")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.contracts.size()", is(0)));
     }
 
     @Test
-    void testGetStatusValidationCVNotFound() throws Exception {
+    void testGetCompanyContractsHappyDay() throws Exception {
+        when(companyService.getContracts(anyLong(), anyString())).thenReturn(contractsDTO);
 
-        when(studentService.getStudentCvStatus(anyLong())).thenThrow(new NonExistentEntityException());
-        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.size()", is(1)));
+    }
+
+    @Test
+    void testGetCompanyContractsNotFound() throws Exception {
+        when(companyService.getContracts(anyLong(), anyString())).thenThrow(new NonExistentEntityException());
+
+        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
                 .andExpect(status().isNotFound());
     }
 
     @Test
-    void testGetCompanyOffersHappyDay() throws Exception {
-
-        when(companyService.getValidatedOffers(anyLong())).thenReturn(List.of(duffOffre));
-        mockMvc.perform(put("/company/validatedOffers/{id}", 1)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()", is(1)));
-    }
-
-    @Test
-    void testGetCompanyOffersForbidden() throws Exception {
+    void testGetCompanyContractsTokenInvalid() throws Exception {
         when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-        mockMvc.perform(put("/company/validatedOffers/{id}", 1)
+
+        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
                 .andExpect(status().isForbidden());
     }
-
-    @Test
-    void testGetStudentCvToValidateCompanyHappyDay() throws Exception {
-        when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        PdfOutDTO cv = new PdfOutDTO(1L, "[96,17,69]");
-        when(companyService.getStudentCv(anyLong())).thenReturn(cv);
-
-        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(jsonPath("$.pdf", is("[96,17,69]")))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void testGetStudentCvToValidateCompanyNotFound() throws Exception {
-        when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        doThrow(new NonExistentEntityException()).
-                when(companyService).getStudentCv(anyLong());
-
-        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testGetStudentCvToValidateCompanyInvalidToken() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
 }
